--- a/doc/9-10.md
+++ b/doc/9-10.md
@@ -12,6 +12,17 @@ pip install pynput
 
 
 
+```bash
+# compile
+catkin_make
+# setup
+source devel/setup.bash
+# launch gazebo
+roslaunch course_agv_gazebo course_agv_world.launch
+```
+
+
+
 # 10-轨迹规划
 
 > 任务-编写astar.py脚本，完成路径规划算法，结合其他框架代码使agv可以到达鼠标设置的目标点
