--- a/doc/9-10.md
+++ b/doc/9-10.md
@@ -1,16 +1,21 @@
 # 9-运动学与tf
 
-> 任务1. 编写运动学分解（kinematics.py）脚本，使机器人可以按照键盘输入速度正确移动
->任务2. 补充robot_tf.py脚本，发布robot_base->map的tf，使键盘控制后的机器人位置可以在rviz中显示
+> 任务1. 编写运动学分解（kinematics.py）脚本（package course_agv_control)，使机器人可以按照键盘输入速度正确移动
+>任务2. 补充robot_tf.py脚本(package course_agv_gazebo)，发布robot_base->map的tf，使键盘控制后的机器人位置可以在rviz中显示
 
 你需要一台安装了ros的ubuntu电脑
+
+如果你不是很熟悉ros，可以参考下[官方的教程](https://wiki.ros.org/cn/ROS/Tutorials)，其中也有针对linux入门者的简易教程推荐
+
+在安装好ros-`rosversion -d`-desktop-full后，运行本次代码你还需要以下的package
+
 ```
 apt install ros-`rosversion -d`-joint-state-publisher-gui ros-`rosversion -d`-joint-state-controller ros-`rosversion -d`-controller-manager ros-`rosversion -d`-gazebo-ros-pkgs ros-`rosversion -d`-gazebo-ros-control ros-`rosversion -d`-velocity-controllers ros-`rosversion -d`-map-server
 apt install xterm
 pip install pynput
 ```
 
-
+首先，运行如下指令查看环境是否装配好，注意查看终端下是否有**红色**的字，一般代表了报错
 
 ```bash
 # compile
@@ -21,8 +26,40 @@ source devel/setup.bash
 roslaunch course_agv_gazebo course_agv_world.launch
 ```
 
+在编写kinematics.py和robot_tf.py脚本后，可以运行course_agv_gazebo下的course_agv_world_rviz.launch进行测试
 
+注：保持之前的course_agv_world.launch运行状态
+
+launch文件中10-12行分别运行了robot_tf脚本，键盘控制脚本以及运动学脚本，若成功运行，可以通过键盘控制agv运动，并在rviz中显示
 
 # 10-轨迹规划
 
 > 任务-编写astar.py脚本，完成路径规划算法，结合其他框架代码使agv可以到达鼠标设置的目标点
+
+使用course_agv_nav包下的nav.launch进行测试（不需要其他launch）
+
+建议测试astar时，先将第10行的global_planner node注释掉，在外部启动
+
+---
+
+astar.py如何与globalplanner.py进行衔接
+
+```python
+# 导入包
+## 导入整个包
+import astar 
+## 或者导入包中的某个class或函数
+from astar import AStar as planner
+
+# 初始化
+astar.planner_init(...)
+## 或者
+self.planner = planner(...)
+
+# 获得起始点，目标点，地图信息，调用进行规划
+astar.plan(...)
+## 或者
+self.planner.plan(...)
+```
+
+建议先看懂globalplanner的代码逻辑（了解ros通信，了解numpy最基本的一些函数即可看懂）
