--- a/doc/9-10.md
+++ b/doc/9-10.md
@@ -7,7 +7,7 @@
 
 如果你不是很熟悉ros，可以参考下[官方的教程](https://wiki.ros.org/cn/ROS/Tutorials)，其中也有针对linux入门者的简易教程推荐
 
-在安装好ros-`rosversion -d`-desktop-full后，运行本次代码你还需要以下的package
+在安装好**ros-\`rosversion -d\`-desktop-full**后，运行本次代码你还需要以下的package
 
 ```
 apt install ros-`rosversion -d`-joint-state-publisher-gui ros-`rosversion -d`-joint-state-controller ros-`rosversion -d`-controller-manager ros-`rosversion -d`-gazebo-ros-pkgs ros-`rosversion -d`-gazebo-ros-control ros-`rosversion -d`-velocity-controllers ros-`rosversion -d`-map-server
@@ -53,13 +53,23 @@ from astar import AStar as planner
 
 # 初始化
 astar.planner_init(...)
-## 或者
+## 或者 (inside class method)
 self.planner = planner(...)
 
-# 获得起始点，目标点，地图信息，调用进行规划
+# 获得起始点，目标点，地图信息，调用进行规划 
 astar.plan(...)
-## 或者
+## 或者 (inside class method)
 self.planner.plan(...)
 ```
 
 建议先看懂globalplanner的代码逻辑（了解ros通信，了解numpy最基本的一些函数即可看懂）
+
+```
+ones/zeros/full/random
+shape
+reshape
+boolean operator
+argwhere
+transpose
+```
+
